[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "marcet-bacend"
version = "0.1.0"
authors = ["lyapin <lajpinkonstantin@gmail.com>"]
description = ""
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.2"

[tool.poetry.scripts]
lint = "ruff check . --fix"
format = "ruff format ."